base-files: recognize bootdevice on devices using fitblk

--- a/package/system/fstools/Makefile
+++ b/package/system/fstools/Makefile
@@ -20,6 +20,7 @@ CMAKE_INSTALL:=1
 PKG_LICENSE:=GPL-2.0
 PKG_LICENSE_FILES:=
 
+PKG_USE_MIPS16:=0
 PKG_BUILD_FLAGS:=no-mips16
 PKG_FLAGS:=nonshared
 
