--- a/.github/workflows/openwrt-ci.yml
+++ b/.github/workflows/openwrt-ci.yml
@@ -72,7 +72,7 @@ jobs:
           CONFIG_PACKAGE_luci-i18n-passwall2-zh-cn=y
           CONFIG_PACKAGE_sing-box=y
           CONFIG_PACKAGE_luci-app-passwall2_Iptables_Transparent_Proxy=y
-          CONFIG_PACKAGE_luci-app-openclash=y
+          #CONFIG_PACKAGE_luci-app-openclash=y
           CONFIG_PACKAGE_naiveproxy=y
           CONFIG_PACKAGE_luci-app-netdata=y
           # CONFIG_PACKAGE_luci-app-frpc is not set
