rockchip: add RUMU3F FINE 3399 support

--- a/package/boot/uboot-rockchip/Makefile
+++ b/package/boot/uboot-rockchip/Makefile
@@ -145,6 +145,16 @@ define U-Boot/xiaobao-nas-v1-rk3399
     codinge_xiaobao-nas-v1
 endef
 
+define U-Boot/fine-3399-rk3399
+  $(U-Boot/rk3399/Default)
+  NAME:=Fine 3399
+  BUILD_DEVICES:= \
+    rumu3f_fine-3399
+  DEPENDS:=+PACKAGE_u-boot-$(1):rkbin-rk3399
+  ATF:=rk3399_bl31_v1.36.elf
+  USE_RKBIN:=1
+endef
+
 define U-Boot/guangmiao-g4c-rk3399
   $(U-Boot/rk3399/Default)
   NAME:=GuangMiao G4C
@@ -314,6 +324,7 @@ UBOOT_TARGETS := \
   sige3-rk3568 \
   station-p2-rk3568 \
   dlfr100-rk3399 \
+  fine-3399-rk3399 \
   h3399pc-rk3399 \
   king3399-rk3399 \
   mpc1903-rk3399 \
