--- a/.github/workflows/openwrt-ci.yml
+++ b/.github/workflows/openwrt-ci.yml
@@ -7,12 +7,9 @@
 #
 name: OpenWrt-CI
 
-on:
-  schedule:
-    - cron: 0 20 * * *
-
-permissions:
-  contents: read
+on: 
+  repository_dispatch:
+  workflow_dispatch:
 
 jobs:
 
