build_openwrt_20241211.yml

--- a/.github/workflows/shawvip.yml
+++ b/.github/workflows/shawvip.yml
@@ -1,75 +1,133 @@
 #
-# This is free software, lisence use MIT.
-# 
-# Copyright (C) 2019 P3TERX <https://p3terx.com>
-# Copyright (C) 2019 KFERMercer <KFER.Mercer@gmail.com>
-# 
 # <https://github.com/KFERMercer/OpenWrt-CI>
 #
-name: OpenWrt-CI
+# Copyright (C) 2019 P3TERX
+#
+# Copyright (C) 2020 KFERMercer
+#
+name: Build Openwrt
+
 on:
   push:
-    branches: 
+    branches:
       - master
-   # ↑↑↑ 改成你的分支名, 一般是master
-   # schedule:
-   # - cron: 0 20 * * *
-   # release:
-   # types: [published]
+  release:
+    types: [published]
+  # schedule:
+  #   - cron: 0 20 * * *
+  # release:
+  #   types: [published]
+  #push:
+  #  tags:
+  #    - '*'
+
+env:
+  REPO_URL: https://github.com/coolsnowwolf/lede
+  REPO_BRANCH: master
+  FEEDS_CONF: feeds.conf.default
+  CONFIG_FILE: .config
+  DIY_P1_SH: diy-part1.sh
+  DIY_P2_SH: diy-part2.sh
+  UPLOAD_BIN_DIR: true
+  UPLOAD_FIRMWARE: true
+  UPLOAD_COWTRANSFER: false
+  UPLOAD_WETRANSFER: false
+  UPLOAD_RELEASE: false
+  TZ: Asia/Shanghai
+
+permissions:
+  contents: read
 
 jobs:
-  build:
+  build_openwrt:
+
+    permissions:
+      contents: write # for release creation
+    
+    name: Build OpenWrt firmware
+
     runs-on: ubuntu-latest
 
+    if: github.event.repository.owner.id == github.event.sender.id || ! github.event.sender.id
+
     steps:
-      - name: Checkout OpenWrt
-        uses: actions/checkout@master
+    
+      - name: Check Server Performance
+        run: |
+          echo "警告⚠"
+          echo "分配的服务器性能有限，若选择的插件过多，务必注意CPU性能！"
+          echo -e "已知CPU型号（降序）：7763，8370C，8272CL，8171M，E5-2673 \n"
+          echo "--------------------------CPU信息--------------------------"
+          echo "CPU物理数量：$(cat /proc/cpuinfo | grep "physical id" | sort | uniq | wc -l)"
+          echo -e "CPU核心信息：$(cat /proc/cpuinfo | grep name | cut -f2 -d: | uniq -c) \n"
+          echo "--------------------------内存信息--------------------------"
+          echo "已安装内存详细信息："
+          echo -e "$(sudo lshw -short -C memory | grep GiB) \n"
+          echo "--------------------------硬盘信息--------------------------"
+          echo "硬盘数量：$(ls /dev/sd* | grep -v [1-9] | wc -l)" && df -hT
+          
+      - name: "Optimize Disk Space"
+        uses: "hugoalh/disk-space-optimizer-ghaction@v0.8.1"
+        with:
+          operate_sudo: "True"
+          general_include: ".+"
+          general_exclude: |-
+            ^GCC$
+            ^G\+\+$
+            Clang
+            LLVM
+          docker_include: ".+"
+          docker_prune: "True"
+          docker_clean: "True"
+          apt_prune: "True"
+          apt_clean: "True"
+          homebrew_prune: "True"
+          homebrew_clean: "True"
+          npm_prune: "True"
+          npm_clean: "True"
+          os_swap: "True"
+  
+      - name: Freeing up disk space
+        uses: easimon/maximize-build-space@master
+        with: 
+          root-reserve-mb: 2048
+          swap-size-mb: 1
+          remove-dotnet: 'true'
+          remove-android: 'true'
+          remove-haskell: 'true'
+          remove-codeql: 'true'
+          remove-docker-images: 'true'
+  
+      - name: Free up disk space complete
+        run: |
+          echo "Free up disk space complete"
+          echo "=============================================================================="
+          df -hT
+          echo "=============================================================================="
+    
+      - name: Checkout
+        uses: actions/checkout@v4
         with:
           ref: master
-         # ↑↑↑ 改成你的分分支分支支名, 一般是master
-      - name: Initialization environment
+
+      - name: Space cleanup
         env:
           DEBIAN_FRONTEND: noninteractive
         run: |
-          docker rmi `docker images -q`
-          sudo -E rm -rf /usr/share/dotnet /etc/mysql /etc/php /etc/apt/sources.list.d /usr/local/lib/android
+          # sudo -E rm -rf /usr/share/dotnet /etc/mysql /etc/php /etc/apt/sources.list.d /usr/local/lib/android
           sudo -E apt-mark hold grub-efi-amd64-signed
           sudo -E apt update
-          sudo -E apt -y purge azure-cli* docker* ghc* zulu* llvm* firefox google* dotnet* powershell* openjdk* mysql* php* mongodb* dotnet* snap*
+          # sudo -E apt -y purge azure-cli* docker* ghc* zulu* llvm* firefox google* dotnet* powershell* openjdk* mysql* php* mongodb* dotnet* snap*
           sudo -E apt -y full-upgrade
-          sudo apt install -y ack antlr3 asciidoc autoconf automake autopoint binutils bison build-essential \
-          bzip2 ccache clang cmake cpio curl device-tree-compiler flex gawk gettext gcc-multilib g++-multilib \
-          git gperf haveged help2man intltool libc6-dev-i386 libelf-dev libfuse-dev libglib2.0-dev libgmp3-dev \
-          libltdl-dev libmpc-dev libmpfr-dev libncurses-dev libncurses-dev libpython3-dev libreadline-dev \
-          libssl-dev libtool llvm lrzsz genisoimage msmtp ninja-build p7zip p7zip-full patch pkgconf python3 \
-          python3-pyelftools python3-setuptools qemu-utils rsync scons squashfs-tools subversion swig texinfo \
-          uglifyjs upx-ucl unzip vim wget xmlto xxd zlib1g-dev
+          sudo -E apt -y install ack antlr3 asciidoc autoconf automake autopoint binutils bison build-essential bzip2 ccache cmake cpio curl device-tree-compiler fastjar flex gawk gettext gcc-multilib g++-multilib git gperf haveged help2man intltool libc6-dev-i386 libelf-dev libfuse-dev libglib2.0-dev libgmp3-dev libltdl-dev libmpc-dev libmpfr-dev libncurses5-dev libncursesw5-dev libpython3-dev libreadline-dev libssl-dev libtool lrzsz mkisofs msmtp ninja-build p7zip p7zip-full patch pkgconf python3 python3-pyelftools python3-setuptools qemu-utils rsync scons squashfs-tools subversion swig texinfo uglifyjs upx-ucl unzip vim wget xmlto xxd zlib1g-dev
+          sudo -E apt -y install clang
           sudo -E systemctl daemon-reload
           sudo -E apt -y autoremove --purge
           sudo -E apt clean
           sudo -E timedatectl set-timezone "Asia/Shanghai"
+          
           df -h
-          
-      - name: Update feeds
-        run: |
-          # 避免warning
-          rm -rf ./feeds1
-            
-      - name: 自定义插件主题
-        run: |
-          # git clone https://github.com/sirpdboy/netspeedtest.git package/netspeedtest
-          # git clone https://github.com/richaradlee/small-package
-          # git clone https://github.com/jerrykuku/lua-maxminddb.git  #git lua-maxminddb 依赖
-          # git clone https://github.com/jerrykuku/luci-app-vssr.git
-          # git rm -r --cached .
-          # git add .
-          # git commit -m "Clear cache"
-          cd package/lean
-          git clone https://github.com/jerrykuku/luci-theme-argon.git
-          # rm -rf luci-theme-argon
-          # git clone -b 18.06 https://github.com/jerrykuku/luci-theme-argon.git luci-theme-argon
-          
-                   
+
       - name: Update feeds
         run: |
           sed -i 's/#src-git helloworld/src-git helloworld/g' ./feeds.conf.default
@@ -82,29 +140,48 @@ jobs:
           ./scripts/feeds update -a
           ./scripts/feeds install -a
 
+      - name: Get new themes
+        run: |
+          rm -rf package/feeds/luci/luci-theme-argon
+          rm -rf package/feeds/luci/luci-app-argon-config
+          rm -rf package/feeds/luci/luci-theme-infinityfreedom
+          rm -rf package/feeds/luci/luci/luci-theme-design
+          #rm -rf package/feeds/luci/luci-theme-opentopd
+          #rm -rf package/feeds/luci/luci-theme-neobird
+          git clone https://github.com/xiaoqingfengATGH/luci-theme-infinityfreedom.git package/feeds/luci/luci-theme-infinityfreedom
+          git clone https://github.com/SAENE/luci-theme-design.git package/feeds/luci/luci-theme-design
+          #git clone https://github.com/sirpdboy/luci-theme-opentopd.git package/feeds/luci/luci-theme-opentopd
+          #git clone https://github.com/thinktip/luci-theme-neobird.git package/feeds/luci/luci-theme-neobird
+          git clone -b master https://github.com/jerrykuku/luci-theme-argon.git package/feeds/luci/luci-theme-argon
+          git clone -b master https://github.com/jerrykuku/luci-app-argon-config.git package/feeds/luci/luci-app-argon-config
+
       - name: Costom configure file
         run: |
           rm -f ./.config*
           touch ./.config
-          
+
           #
           # ========================固件定制部分========================
           # 
+
           # 
           # 如果不对本区块做出任何编辑, 则生成默认配置固件. 
           # 
+
           # 以下为定制化固件选项和说明:
           #
+
           #
           # 有些插件/选项是默认开启的, 如果想要关闭, 请参照以下示例进行编写:
           # 
-          # =========================================
-          # | # 取消编译VMware镜像: |
-          # | cat >> .config <<EOF |
-          # | # CONFIG_VMDK_IMAGES is not set |
-          # | EOF |
-          # =========================================
+          #          =========================================
+          #         |  # 取消编译VMware镜像:                   |
+          #         |  cat >> .config <<EOF                   |
+          #         |  # CONFIG_VMDK_IMAGES is not set        |
+          #         |  EOF                                    |
+          #          =========================================
           #
+
           # 
           # 以下是一些提前准备好的一些插件选项.
           # 直接取消注释相应代码块即可应用. 不要取消注释代码块上的汉字说明.
@@ -115,34 +192,33 @@ jobs:
           # 
           # 无论你想要对固件进行怎样的定制, 都需要且只需要修改 EOF 回环内的内容.
           # 
-          
+
           # 编译x64固件:
           cat >> .config <<EOF
           CONFIG_TARGET_x86=y
           CONFIG_TARGET_x86_64=y
           CONFIG_TARGET_x86_64_Generic=y
           EOF
-          
-          # Image Config
-          CONFIG_TARGET_KERNEL_PARTSIZE=128
-          CONFIG_TARGET_ROOTFS_PARTSIZE=640
-          
+
           # 固件压缩:
           cat >> .config <<EOF
           CONFIG_TARGET_IMAGES_GZIP=y
           EOF
-          
+
           # 编译UEFI固件:
           cat >> .config <<EOF
           CONFIG_EFI_IMAGES=y
           EOF
-          
+
           # IPv6支持:
           cat >> .config <<EOF
           CONFIG_PACKAGE_dnsmasq_full_dhcpv6=y
           CONFIG_PACKAGE_ipv6helper=y
+          CONFIG_PACKAGE_odhcp6c=y
+          CONFIG_PACKAGE_odhcpd-ipv6only=y
+          CONFIG_PACKAGE_luci-proto-ipv6=y
           EOF
-          
+
           # 多文件系统支持:
           cat >> .config <<EOF
           CONFIG_PACKAGE_kmod-fs-nfs=y
@@ -151,6 +227,13 @@ jobs:
           CONFIG_PACKAGE_kmod-fs-nfs-v4=y
           CONFIG_PACKAGE_kmod-fs-ntfs=y
           CONFIG_PACKAGE_kmod-fs-squashfs=y
+          EOF
+
+          # bonding支持:
+          cat >> .config <<EOF
+          CONFIG_PACKAGE_kmod-bonding=y
+          CONFIG_PACKAGE_proto-bonding=y
+          CONFIG_PACKAGE_luci-proto-bonding=y
           EOF
           
           # USB3.0支持:
@@ -161,7 +244,7 @@ jobs:
           CONFIG_PACKAGE_kmod-usb2-pci=y
           CONFIG_PACKAGE_kmod-usb3=y
           EOF
-         
+
           # 常用LuCI插件选择:
           cat >> .config <<EOF
           # CONFIG_PACKAGE_luci-app-adbyby-plus=y
@@ -215,19 +298,22 @@ jobs:
           # CONFIG_PACKAGE_luci-app-netspeedtest=y
           CONFIG_PACKAGE_luci-app-msd_lite=y
           CONFIG_PACKAGE_luci-app-lucky=y
+          CONFIG_PACKAGE_luci-app-zerotier=y
           EOF
-         
+
           # LuCI主题:
           cat >> .config <<EOF
           CONFIG_PACKAGE_luci-theme-argon=y
-          # CONFIG_PACKAGE_luci-theme-netgear=y
+          CONFIG_PACKAGE_luci-app-argon-config=y
+          CONFIG_PACKAGE_luci-theme-netgear=y
+          CONFIG_PACKAGE_luci-theme-bootstrap=y
+          # CONFIG_PACKAGE_luci-theme-material=y
+          # CONFIG_PACKAGE_luci-theme-opentomato=y
+          # CONFIG_PACKAGE_luci-theme-infinityfreedom is not set
+          # CONFIG_PACKAGE_luci-theme-opentopd=y
           # CONFIG_PACKAGE_luci-theme-neobird=y
-          # CONFIG_PACKAGE_luci-theme-tomato=y
-          # CONFIG_PACKAGE_luci-theme-argon_new=y
-          # CONFIG_PACKAGE_luci-theme-edge=y
-          # CONFIG_PACKAGE_luci-theme-ifit=y
           EOF
-          
+
           # 常用软件包:
           cat >> .config <<EOF
           CONFIG_PACKAGE_curl=y
@@ -237,30 +323,32 @@ jobs:
           CONFIG_PACKAGE_tree=y
           CONFIG_PACKAGE_vim-fuller=y
           CONFIG_PACKAGE_wget=y
+          CONFIG_PACKAGE_acme=y
+          CONFIG_PACKAGE_acme-dnsapi=y
+          CONFIG_PACKAGE_haproxy=y
+          CONFIG_PACKAGE_socat=y
+          CONFIG_SOCAT_SSL=y
           CONFIG_PACKAGE_chinadns-gn=y
           EOF
-          
+
           # 取消编译VMware镜像以及镜像填充 (不要删除被缩进的注释符号):
-          cat >> .config <<EOF
-          # CONFIG_TARGET_IMAGES_PAD is not set
-          # CONFIG_VMDK_IMAGES is not set
-          EOF
+          # cat >> .config <<EOF
+          # # CONFIG_TARGET_IMAGES_PAD is not set
+          # # CONFIG_VMDK_IMAGES is not set
+          # EOF
+
           # 
           # ========================固件定制部分结束========================
           # 
+
           sed -i 's/^[ \t]*//g' ./.config
           make defconfig
-      
-      #- name: Make download 
-      #  run: |
-      #    make download -j8
-      #    find dl -size -1024c -exec rm -f {} \;
-      
+
       - name: Make download
         run: |
-          make download -j8 || make download -j1 V=s
-          rm -rf $(find ./dl/ -size -1024c)
-          df -h
+          make download -j8
+          find dl -size -1024c -exec rm -f {} \;
+
       - name: Compile firmware
         run: |
           make -j$(nproc) || make -j1 V=s
@@ -272,7 +360,7 @@ jobs:
           du -h --max-depth=1 ./ --exclude=build_dir --exclude=bin
           du -h --max-depth=1 ./build_dir
           du -h --max-depth=1 ./bin
-      
+
       - name: Prepare artifact
         run: |
           mkdir -p ./artifact/firmware
@@ -282,23 +370,25 @@ jobs:
           cp -rf $(find ./bin/targets/ -type f) ./artifact/firmware/
           cp -rf $(find ./bin/packages/ -type f -name "*.ipk") ./artifact/package/
           cp -rf $(find ./bin/targets/ -type f -name "*.buildinfo" -o -name "*.manifest") ./artifact/buildinfo/
+
       - name: Deliver buildinfo
-        uses: actions/upload-artifact@v3
+        uses: actions/upload-artifact@v4
         with:
-          name: OpenWrt_firmware_241116
+          name: OpenWrt_buildinfo
           path: ./artifact/buildinfo/
 
       - name: Deliver package
-        uses: actions/upload-artifact@v3
+        uses: actions/upload-artifact@v4
         with:
           name: OpenWrt_package
           path: ./artifact/package/
 
       - name: Deliver firmware
-        uses: actions/upload-artifact@v3
+        uses: actions/upload-artifact@v4
         with:
-          name: OpenWrt_firmware_241204
-          path: ./bin/targets/    
+          name: OpenWrt_firmware
+          path: ./bin/targets/
+  
 
       - name: Upload release asset
         if: github.event == 'release'
@@ -307,10 +397,3 @@ jobs:
           repo_token: ${{ secrets.YOURTOKEN }}
           file: ./artifact/firmware/*
           tag: ${{ github.ref }}
-          file_glob: true
-
-      - name: Upload firmware
-        uses: actions/upload-artifact@v3
-        with:
-          name: OpenWrt_firmware
-          path: ./bin/targets/
