--- a/.github/workflows/shawvip.yml
+++ b/.github/workflows/shawvip.yml
@@ -148,8 +148,8 @@ jobs:
           rm -rf package/feeds/luci/luci/luci-theme-design
           #rm -rf package/feeds/luci/luci-theme-opentopd
           #rm -rf package/feeds/luci/luci-theme-neobird
-          git clone https://github.com/xiaoqingfengATGH/luci-theme-infinityfreedom.git package/feeds/luci/luci-theme-infinityfreedom
-          git clone https://github.com/SAENE/luci-theme-design.git package/feeds/luci/luci-theme-design
+          #git clone https://github.com/xiaoqingfengATGH/luci-theme-infinityfreedom.git package/feeds/luci/luci-theme-infinityfreedom
+          #git clone https://github.com/SAENE/luci-theme-design.git package/feeds/luci/luci-theme-design
           #git clone https://github.com/sirpdboy/luci-theme-opentopd.git package/feeds/luci/luci-theme-opentopd
           #git clone https://github.com/thinktip/luci-theme-neobird.git package/feeds/luci/luci-theme-neobird
           git clone -b master https://github.com/jerrykuku/luci-theme-argon.git package/feeds/luci/luci-theme-argon
@@ -274,7 +274,7 @@ jobs:
           CONFIG_PACKAGE_luci-app-openvpn-server=y
           CONFIG_PACKAGE_openvpn-easy-rsa=y
           CONFIG_PACKAGE_luci-app-zerotier=y
-          CONFIG_SING_BOX_WITH_WIREGUARD=y
+          # CONFIG_SING_BOX_WITH_WIREGUARD=y
           CONFIG_PACKAGE_kmod-wireguard=y
           CONFIG_PACKAGE_luci-proto-wireguard=y          
           CONFIG_PACKAGE_wireguard-tools=y
@@ -288,7 +288,7 @@ jobs:
           CONFIG_PACKAGE_luci-theme-bootstrap=y
           # CONFIG_PACKAGE_luci-theme-material=y
           # CONFIG_PACKAGE_luci-theme-opentomato=y
-          # CONFIG_PACKAGE_luci-theme-infinityfreedom is not set
+          # CONFIG_PACKAGE_luci-theme-infinityfreedom
           # CONFIG_PACKAGE_luci-theme-opentopd=y
           # CONFIG_PACKAGE_luci-theme-neobird=y
           EOF
