--- a/.github/workflows/shawvip.yml
+++ b/.github/workflows/shawvip.yml
@@ -276,10 +276,6 @@ jobs:
           CONFIG_PACKAGE_wireguard-tools=y
           EOF
 
- 
-
-           
-
           # LuCI主题:
           cat >> .config <<EOF
           CONFIG_PACKAGE_luci-theme-argon=y
@@ -327,6 +323,14 @@ jobs:
         run: |
           make download -j8
           find dl -size -1024c -exec rm -f {} \;
+
+      - name: Cache
+        uses: stupidloud/cachewrtbuild@main
+        with:
+           ccache: 'true'
+           mixkey: 'unique-mixkey-value'
+           clean: 'true'
+           prefix: '/home/runner/work/lede/lede'
 
       - name: Compile firmware
         run: |
