--- a/.github/workflows/tr3000.yml
+++ b/.github/workflows/tr3000.yml
@@ -1,95 +1,80 @@
-name: Build Cudy TR3000 Firmware (MT7981B)
+name: Build Cudy TR3000 Firmware
 
 on:
-  workflow_dispatch:
   push:
     branches:
       - main
-  pull_request:
-    branches:
-      - main
+  workflow_dispatch:
 
 jobs:
   build:
     runs-on: ubuntu-latest
 
     steps:
-    - name: Checkout repository
+    - name: Checkout code
       uses: actions/checkout@v3
 
     - name: Set up environment
       run: |
         sudo apt-get update
-        sudo apt-get install -y build-essential libncurses5-dev libncursesw5-dev zlib1g-dev gawk git gettext libssl-dev xsltproc wget unzip python3 python3-distutils
+        sudo apt-get install -y build-essential clang flex bison g++ gawk gcc-multilib g++-multilib \
+        gettext git libncurses5-dev libssl-dev python3-setuptools rsync swig unzip zlib1g-dev \
+        file wget llvm python3-pyelftools libpython3-dev aria2 jq qemu-utils ccache rename \
+        libelf-dev device-tree-compiler libgmp3-dev libmpc-dev libfuse-dev
 
     - name: Clone OpenWrt source
       run: |
-        git clone https://github.com/coolsnowwolf/lede.git openwrt
-        cd openwrt
-        git checkout v23.05.5
-
-    - name: Update feeds
-      run: |
+        git clone https://github.com/coolsnowwolf/lede openwrt
         cd openwrt
         ./scripts/feeds update -a
         ./scripts/feeds install -a
 
-    - name: Configure OpenWrt for MT7981B
+    - name: Configure for Cudy TR3000
       run: |
         cd openwrt
+        # 设置目标设备为 Cudy TR3000（ramips/mt7621）
         echo "CONFIG_TARGET_mediatek=y" > .config
         echo "CONFIG_TARGET_mediatek_filogic=y" >> .config
-        echo "CONFIG_TARGET_mediatek_filogic_DEVICE_cudy-tr3000=y" >> .config
+        echo "CONFIG_TARGET_mediatek_filogic_DEVICE_cudy-tr3000-v1=y" >> .config
+
+        # 安装插件
         echo "CONFIG_PACKAGE_kmod-usb-net-rndis=y" >> .config
         echo "CONFIG_PACKAGE_luci-app-adguardhome=y" >> .config
         echo "CONFIG_PACKAGE_luci-app-turboacc=y" >> .config
         echo "CONFIG_PACKAGE_luci-app-ttyd=y" >> .config
         echo "CONFIG_PACKAGE_luci-app-sqm=y" >> .config
         echo "CONFIG_PACKAGE_luci-app-passwall2=y" >> .config
-        echo "CONFIG_PACKAGE_nginx=y" >> .config
-        echo "CONFIG_PACKAGE_luci-ssl=y" >> .config
-        echo "CONFIG_PACKAGE_luci-app-uhttpd=y" >> .config
-        echo "CONFIG_PACKAGE_luci-i18n-base-zh-cn=y" >> .config
-        echo "CONFIG_PACKAGE_luci-i18n-adguardhome-zh-cn=y" >> .config
-        echo "CONFIG_PACKAGE_luci-i18n-turboacc-zh-cn=y" >> .config
-        echo "CONFIG_PACKAGE_luci-i18n-ttyd-zh-cn=y" >> .config
-        echo "CONFIG_PACKAGE_luci-i18n-sqm-zh-cn=y" >> .config
-        echo "CONFIG_PACKAGE_luci-i18n-passwall2-zh-cn=y" >> .config
+
+        # 设置 LAN 口 IP
+        echo "CONFIG_TARGET_IP_ADDRESS=10.18.18.3" >> .config
+
+        # 设置登录密码
+        echo "CONFIG_TARGET_ROOTFS_PASSWORD=qwertyui" >> .config
+
+        # 设置 Web 服务器为 Nginx
+        echo "CONFIG_PACKAGE_luci-app-nginx=y" >> .config
+        echo "CONFIG_PACKAGE_luci-app-nginx-config=y" >> .config
+        echo "CONFIG_PACKAGE_luci-app-nginx-ssl=y" >> .config
+
+        # 设置主机名
+        echo "CONFIG_TARGET_HOSTNAME=CudyTR3000" >> .config
+
+        # 设置自定义签名
+        echo "CONFIG_VERSION_DIST=SharkChili" >> .config
+
+        # 设置固件版本
+        echo "CONFIG_VERSION_NUMBER=23.05.5" >> .config
+
+        # 生成默认配置
         make defconfig
 
-    - name: Build firmware
+    - name: Compile OpenWrt
       run: |
         cd openwrt
-        make -j$(nproc)
+        make -j$(($(nproc) + 1)) V=s
 
-    - name: Upload firmware
+    - name: Upload firmware as artifact
       uses: actions/upload-artifact@v3
       with:
         name: cudy-tr3000-firmware
-        path: openwrt/bin/targets/mediatek/filogic/*.bin
-
-    - name: Customize firmware settings
-      run: |
-        cd openwrt
-        echo "uci set network.lan.ipaddr='10.18.18.3'" >> custom.sh
-        echo "uci set system.@system[0].hostname='CudyTR3000'" >> custom.sh
-        echo "uci set system.@system[0].timezone='CST-8'" >> custom.sh
-        echo "uci set system.@system[0].zonename='Asia/Shanghai'" >> custom.sh
-        echo "uci set luci.main.lang='zh_cn'" >> custom.sh
-        echo "uci set luci.main.mediaurlbase='/luci-static/bootstrap'" >> custom.sh
-        echo "uci set luci.main.loginpath='TR3000/'" >> custom.sh
-        echo "uci set luci.main.password='qwertyui'" >> custom.sh
-        echo "uci commit" >> custom.sh
-        chmod +x custom.sh
-        ./custom.sh
-
-    - name: Rebuild firmware with custom settings
-      run: |
-        cd openwrt
-        make -j$(nproc)
-
-    - name: Upload customized firmware
-      uses: actions/upload-artifact@v3
-      with:
-        name: cudy-tr3000-custom-firmware
-        path: openwrt/bin/targets/mediatek/filogic/*.bin
+        path: openwrt/bin/targets/mediatek/filogic/*
