--- a/.github/workflows/tr3000.yml
+++ b/.github/workflows/tr3000.yml
@@ -32,7 +32,7 @@ jobs:
     - name: Configure for Cudy TR3000
       run: |
         cd openwrt
-        # 设置目标设备为 Cudy TR3000（ramips/mt7621）
+        # 设置目标设备为 Cudy TR3000（mediatek/filogic）
         echo "CONFIG_TARGET_mediatek=y" > .config
         echo "CONFIG_TARGET_mediatek_filogic=y" >> .config
         echo "CONFIG_TARGET_mediatek_filogic_DEVICE_cudy-tr3000-v1=y" >> .config
