--- a/.github/workflows/demoTest.yml
+++ b/.github/workflows/demoTest.yml
@@ -57,9 +57,9 @@ jobs:
 
     # ---------------------- 阶段4：确保脚本在正确目录 ----------------------
     - name: 🛠️ 复制自定义脚本到 lede 目录
-      #run: |
-        #cp github.workspace/diy-part1.sh $GITHUB_WORKSPACE/lede/
-        #cp $GITHUB_WORKSPACE/diy-part2.sh $GITHUB_WORKSPACE/lede/
+      run: |
+        cp ${{ github.workspace }}/diy-part1.sh $GITHUB_WORKSPACE/lede/
+        cp github.workspace/diy-part2.sh $GITHUB_WORKSPACE/lede/
 
     # ---------------------- 阶段5：执行自定义脚本 ----------------------
     - name: 🛠️ 执行 diy-part1.sh
