--- a/.github/workflows/demoTest.yml
+++ b/.github/workflows/demoTest.yml
@@ -58,6 +58,10 @@ jobs:
     # ---------------------- 阶段4：确保脚本在正确目录 ----------------------
     - name: 🛠️ 复制自定义脚本到 lede 目录
       run: |
+        ls -la
+        find .
+        pwd
+        
         cp diy-part1.sh $GITHUB_WORKSPACE/lede/
         cp github.workspace/diy-part2.sh $GITHUB_WORKSPACE/lede/
 
