--- a/.github/workflows/demoTest.yml
+++ b/.github/workflows/demoTest.yml
@@ -59,7 +59,7 @@ jobs:
     - name: 🛠️ 复制自定义脚本到 lede 目录
       run: |
         ls
-        find .
+        find diy-part2.sh
         pwd
         
         cp diy-part1.sh $GITHUB_WORKSPACE/lede/
