--- a/.github/workflows/demoTest.yml
+++ b/.github/workflows/demoTest.yml
@@ -62,8 +62,8 @@ jobs:
         find diy-part2.sh
         pwd
         
-        cp diy-part1.sh $GITHUB_WORKSPACE/lede/
-        cp github.workspace/diy-part2.sh $GITHUB_WORKSPACE/lede/
+        cp lede/diy-part1.sh $GITHUB_WORKSPACE/lede/
+        cp lede/diy-part2.sh $GITHUB_WORKSPACE/lede/
 
     # ---------------------- 阶段5：执行自定义脚本 ----------------------
     - name: 🛠️ 执行 diy-part1.sh
