--- a/.github/workflows/demoTest.yml
+++ b/.github/workflows/demoTest.yml
@@ -61,8 +61,8 @@ jobs:
         ls
         pwd
         
-        cp lede/diy-part1.sh $GITHUB_WORKSPACE/lede/
-        cp lede/diy-part2.sh $GITHUB_WORKSPACE/lede/
+        #cp lede/diy-part1.sh $GITHUB_WORKSPACE/lede/
+        #cp lede/diy-part2.sh $GITHUB_WORKSPACE/lede/
 
     # ---------------------- 阶段5：执行自定义脚本 ----------------------
     - name: 🛠️ 执行 diy-part1.sh
