--- a/.github/workflows/demoTest.yml
+++ b/.github/workflows/demoTest.yml
@@ -74,7 +74,7 @@ jobs:
     # ---------------------- 阶段6：生成编译配置 ----------------------
     - name: ⚙️ 生成配置
       run: |
-        cd lede
+        #cd lede
         # 合并旧配置（如果存在）
         [ -f .config ] && cp .config .config.bak || true
         make defconfig
@@ -102,7 +102,7 @@ jobs:
     # ---------------------- 阶段7：核心编译 ----------------------
     - name: 🔨 开始编译
       run: |
-        cd lede
+        #cd lede
         # 动态线程控制（防止OOM）
         MAX_CORES=$(nproc)
         SAFE_CORES=$(( MAX_CORES > 4 ? 4 : MAX_CORES ))
@@ -118,7 +118,7 @@ jobs:
     # ---------------------- 阶段8：产物处理 ----------------------
     - name: 📦 打包输出
       run: |
-        cd lede
+        #cd lede
         RELEASE_NAME="openwrt_x86_$(date +'%Y%m%d_%H%M')"
         mkdir -p $RELEASE_NAME
         cp $FIRMWARE_DIR/*.{img,sha256sum} $RELEASE_NAME/
