--- a/.github/workflows/demoTest.yml
+++ b/.github/workflows/demoTest.yml
@@ -76,8 +76,8 @@ jobs:
       run: |
         #cd lede
         # 合并旧配置（如果存在）
-        [ -f .config ] && cp .config .config.bak || true
-        make defconfig
+        # [ -f .config ] && cp .config .config.bak || true
+        # make defconfig
 
         # 执行 diy-part2.sh
         chmod +x diy-part2.sh
