--- a/.github/workflows/demoTest.yml
+++ b/.github/workflows/demoTest.yml
@@ -74,6 +74,8 @@ jobs:
     # ---------------------- 阶段6：生成编译配置 ----------------------
     - name: ⚙️ 生成配置
       run: |
+        ls
+        pwd
         #cd lede
         # 合并旧配置（如果存在）
         # [ -f .config ] && cp .config .config.bak || true
